# webirr-api-python-client

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
examples/: example1_create_update_bill.py  example2_payment_status_single_poll.py  example3_delete_bill.py  example4_payment_status_bulk_poll.py  example5_stat_report.py  example6_payment_status_webhook.py  example7_get_bill_and_list_bills.py  example8_supported_banks.py
src/webirr/: __init__.py  client.py  errors.py  models.py
tests/: test_client.py  test_live_test_env.py
